# rgba

./: .gitignore  API.md  BDD_METHODOLOGY.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CPU_DEBUG_STATUS.md  Cargo.toml  FINAL_ACHIEVEMENT.md  FINAL_ITERATION_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  GUI_README.md  IMPLEMENTATION_REPORT.md  ITERATION_PROGRESS.md  ITERATION_SUMMARY.md  LICENSE  PROJECT_COMPLETE.md  QUICK_START.md  RALPH_LOOP_FINAL_REPORT.md  RALPH_PROGRESS.md  README.md  TEST_STATUS.md  trace_arm_detailed.rs
.claude/: ralph-loop.local.md
.github/workflows/: gba-tests.yml
examples/: active_trace.rs  aggressive_play.rs  all_cb_check.rs  all_keys.rs  all_keys_test.rs  all_pal.rs  attract_mode.rs  basic_test.rs  bench_parallel.rs  bg0_analysis.rs  bg0_render.rs  bg1_debug.rs  bg_check.rs  bg_config_trace.rs  bg_diag.rs  bg_diagnostic.rs  bg_layers.rs  bg_register_analysis.rs  bg_render_debug.rs  bg_render_diag.rs  bg_state_dump.rs  bg_timeline.rs  bg_trace.rs  bios_boot_trace.rs  bios_check.rs  bios_irq.rs  bios_raw.rs  bios_trace.rs  bl_targets.rs  black_check.rs  black_hole.rs  blank_trace.rs  blank_track.rs  bldcnt_check.rs  bldy_check.rs  bldy_per_scanline.rs  bldy_trace.rs  blend_compare.rs  blend_test.rs  boot_state.rs  (+597 more)
src/: apu.rs  cpu.rs  dma.rs  eeprom.rs  flash.rs  input.rs  lib.rs  main.rs  mem.rs  ppu.rs  timer.rs
tests/: apu_behavior.rs  behavior_tests.rs  cpu_behavior.rs  dma_behavior.rs  harvest_trace.rs  input_behavior.rs  integration.rs  memory_behavior.rs  ppu_behavior.rs  timer_behavior.rs
(+2 files in other folders)
