[package]
name = "rgba"
version = "0.2.0"
edition = "2021"
authors = ["RGBA Team"]
description = "A Game Boy Advance emulator written in Rust"
license = "MIT"

[dependencies]
bitflags = "2.6"

# Optional GUI dependencies
minifb = { version = "0.25", optional = true }

[dev-dependencies]
criterion = "0.5"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[features]
default = []
gui = ["minifb"]
